# asgard

./: CMakeLists.txt  README.md  asgard-config.cmake  asgard-env.sh
contrib/: FindLINALG.cmake  contrib.cmake  io.cmake
doxygen/: CMakeLists.txt  asgard.css  basic_usage.md  header.html  installation.md  plotting.md
examples/: CMakeLists.txt  continuity_2d.cpp  continuity_2d.m  continuity_2d.py  inputs_1d.cpp  inputs_1d.py  inputs_1d_1.txt  inputs_1d_2.txt
infiles/: continuity2dsg.txt  landau1x3vasg.txt  riemann1x3vmg.txt  twostream2dasg.txt
python/: asgard.py  asgard_cell_centers.m  asgard_config.py  asgard_evaluate.m  asgard_file_stats.m  asgard_matlab.py  asgard_plot1d.m  asgard_plot2d.m  pyasgard_test.py  sandbox.py
scripts/matlab/: plot_fval.m
src/: adapt.cpp  adapt.hpp  adapt_tests.cpp  asgard.cpp  asgard.hpp  asgard_adapt.cpp  asgard_adapt.hpp  asgard_basis.cpp  asgard_basis.hpp  asgard_basis_tests.cpp  asgard_batch.cpp  asgard_batch.hpp  asgard_bicgstab.cpp  asgard_bicgstab.hpp  asgard_bicgstab_tests.cpp  asgard_boundary_conditions.cpp  asgard_boundary_conditions.hpp  asgard_boundary_conditions_tests.cpp  asgard_build_info.hpp.in  asgard_cblacs_grid.cpp  asgard_cblacs_grid.hpp  asgard_cblacs_grid_tests.cpp  asgard_coefficients.cpp  asgard_coefficients.hpp  asgard_coefficients_tests.cpp  asgard_dimension.hpp  asgard_discretization.cpp  asgard_discretization.hpp  asgard_discretization_tests.cpp  asgard_distribution.cpp  asgard_distribution.hpp  asgard_distribution_tests.cpp  asgard_elements.cpp  asgard_elements.hpp  asgard_fast_math.hpp  asgard_fast_math_tests.cpp  asgard_grid_1d.hpp  asgard_indexset.cpp  asgard_indexset.hpp  asgard_indexset_tests.cpp  (+119 more)
src/device/: asgard_cusparse.hpp  asgard_glkronmult_bcpu.cpp  asgard_glkronmult_cpu.cpp  asgard_kronmult.cpp  asgard_kronmult.hpp  asgard_kronmult_common.hpp  asgard_kronmult_cpu.cpp  asgard_kronmult_cpu_general.hpp  asgard_preconditioner_gpu.cpp  asgard_spkronmult.cpp  asgard_spkronmult_cpu.cpp  asgard_spkronmult_cpu_general.hpp
src/pde/: asgard_pde_advection1.hpp  asgard_pde_base.hpp  asgard_pde_collisional_landau.hpp  asgard_pde_collisional_landau_1x2v.hpp  asgard_pde_collisional_landau_1x3v.hpp  asgard_pde_continuity1.hpp  asgard_pde_continuity2.hpp  asgard_pde_continuity3.hpp  asgard_pde_continuity6.hpp  asgard_pde_diffusion1.hpp  asgard_pde_diffusion2.hpp  asgard_pde_fokkerplanck1_4p3.hpp  asgard_pde_fokkerplanck1_4p4.hpp  asgard_pde_fokkerplanck1_4p5.hpp  asgard_pde_fokkerplanck1_pitch_C.hpp  asgard_pde_fokkerplanck1_pitch_E.hpp  asgard_pde_fokkerplanck2_complete.hpp  asgard_pde_relaxation_1x1v.hpp  asgard_pde_relaxation_1x2v.hpp  asgard_pde_relaxation_1x3v.hpp  asgard_pde_riemann_1x2v.hpp  asgard_pde_riemann_1x3v.hpp  asgard_pde_two_stream.hpp  asgard_pde_vlasov_lb_full_f.hpp  pde_advection1.hpp  pde_base.hpp  pde_collisional_landau.hpp  pde_collisional_landau_1x2v.hpp  pde_collisional_landau_1x3v.hpp  pde_continuity1.hpp  pde_continuity2.hpp  pde_continuity3.hpp  pde_continuity6.hpp  pde_diffusion1.hpp  pde_diffusion2.hpp  pde_fokkerplanck1_4p3.hpp  pde_fokkerplanck1_4p4.hpp  pde_fokkerplanck1_4p5.hpp  pde_fokkerplanck1_pitch_C.hpp  pde_fokkerplanck1_pitch_E.hpp  (+14 more)
testing/: TestingCMakeLists.txt  sandbox.cpp  test_input1.txt  test_input2.txt  test_post_install.sh  tests_general.cpp  tests_general.hpp
testing/automated/: clang-format-check.sh
